bk_ida/gccida/c0/start_init
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/start_init/src/c-typeck.c:5542:24: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
p->constructor_stack = constructor_stack_0; 
                       ^~~~~~~~~~~~~~~~~~~
                       constructor_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/start_init/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/start_init/src/c-typeck.c:5543:30: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
p->constructor_range_stack = constructor_range_stack_0; 
                             ^~~~~~~~~~~~~~~~~~~~~~~~~
                             constructor_range_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/start_init/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/start_init/src/c-typeck.c:5545:15: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
p->spelling = spelling_0; 
              ^~~~~~~~~~
              spelling
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/start_init/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/start_init/src/c-typeck.c:5550:11: error: use of undeclared identifier 'initializer_stack_0'; did you mean 'initializer_stack'?
p->next = initializer_stack_0; 
          ^~~~~~~~~~~~~~~~~~~
          initializer_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/start_init/src/c-typeck.c:5059:27: note: 'initializer_stack' declared here
struct initializer_stack *initializer_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/start_init/src/c-typeck.c:5551:1: error: use of undeclared identifier 'initializer_stack_0'; did you mean 'initializer_stack'?
initializer_stack_0 = p; 
^~~~~~~~~~~~~~~~~~~
initializer_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/start_init/src/c-typeck.c:5059:27: note: 'initializer_stack' declared here
struct initializer_stack *initializer_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/start_init/src/c-typeck.c:5584:1: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
constructor_stack_0 = 0LL; 
^~~~~~~~~~~~~~~~~~~
constructor_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/start_init/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/start_init/src/c-typeck.c:5585:1: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
constructor_range_stack_0 = 0LL; 
^~~~~~~~~~~~~~~~~~~~~~~~~
constructor_range_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/start_init/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/start_init/src/c-typeck.c:5589:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = 0LL; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/start_init/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/start_init/src/obj/c-typeck.o] Error 1
